// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TWAMM #claimEarnings gas 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 32013,
}
`;

exports[`TWAMM #executeTWAMMOrders both pools selling one interval gas 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 269129,
}
`;

exports[`TWAMM #executeTWAMMOrders both pools selling three intervals gas 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 427574,
}
`;

exports[`TWAMM #executeTWAMMOrders both pools selling two intervals gas 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 387459,
}
`;

exports[`TWAMM #executeTWAMMOrders single pool sell one interval gas 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 111619,
}
`;

exports[`TWAMM #executeTWAMMOrders single pool sell three intervals gas 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 167893,
}
`;

exports[`TWAMM #executeTWAMMOrders single pool sell two intervals gas 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 146518,
}
`;

exports[`TWAMM #modifyLongTermOrder gas 1`] = `
Object {
  "calldataByteLength": 132,
  "gasUsed": 38804,
}
`;

exports[`TWAMM #submitLongTermOrder gas 1`] = `
Object {
  "calldataByteLength": 132,
  "gasUsed": 123093,
}
`;

exports[`TWAMM end-to-end simulation single pool sell tests gas zeroForOne=false 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 104903,
}
`;

exports[`TWAMM end-to-end simulation single pool sell tests gas zeroForOne=true 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 98262,
}
`;
